# fractal_ml_casestudy

./: README.md  main.py  pyproject.toml
data/raw/dataset/: sample_submission.csv
notebooks/: BERT_Text_Classification_with_PyTorch.ipynb  Presentation1.pptx  script1.ipynb
results/: predicted_results.csv  results.csv  submission.csv  test_with_predictions.csv
