[project]
name = "fractal-ml-casestudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "bs4>=0.0.2",
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers[torch]>=4.55.0",
    "wordcloud>=1.9.4",
]
